Homepage Designed with footer

--- a/index.html
+++ b/index.html
@@ -148,99 +148,127 @@
                     <p>Everything you need for your academic journey organized by department and semester</p>
                   </div>
 
-                  <div class="row gy-4">
-                    <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
-                      <a href="./sahayi/notes.html" class="portfolio-item sahayi-card text-decoration-none">
-                        <div class="text-center p-4">
-                          <i class="bi bi-file-text card-icon"></i>
-                          <h3 class="mt-3 mb-2" style="color: #222;">Study Notes</h3>
-                          <p class="text-muted">Comprehensive study notes organized by semester and subject</p>
-                          <span class="text-danger fw-bold">Explore →</span>
-                        </div>
-                      </a>
-                    </div>
 
-                    <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="150">
-                      <a href="./sahayi/qnpapers.html" class="portfolio-item sahayi-card text-decoration-none">
-                        <div class="text-center p-4">
-                          <i class="bi bi-clipboard-check card-icon"></i>
-                          <h3 class="mt-3 mb-2" style="color: #222;">Question Papers</h3>
-                          <p class="text-muted">Previous year papers for exam preparation and practice</p>
-                          <span class="text-danger fw-bold">Explore →</span>
-                        </div>
-                      </a>
-                    </div>
+                   <div class="row gy-4">
+                     <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
+                       <a href="./sahayi/notes.html" class="portfolio-item sahayi-card text-decoration-none">
+                         <div class="text-center p-4">
+                           <i class="bi bi-file-text card-icon"></i>
+                           <h3 class="mt-3 mb-2" style="color: #222;">Study Notes</h3>
+                           <p class="text-muted">Comprehensive study notes organized by semester and subject</p>
+                           <span class="text-danger fw-bold">Explore →</span>
+                         </div>
+                       </a>
+                     </div>
 
-                    <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
-                      <a href="./sahayi/scholarship.html" class="portfolio-item sahayi-card text-decoration-none">
-                        <div class="text-center p-4">
-                          <i class="bi bi-gift card-icon"></i>
-                          <h3 class="mt-3 mb-2" style="color: #222;">Scholarships</h3>
-                          <p class="text-muted">Financial aid opportunities and scholarship information</p>
-                          <span class="text-danger fw-bold">Explore →</span>
-                        </div>
-                      </a>
-                    </div>
-                  </div>
+                     <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="150">
+                       <a href="./sahayi/qnpapers.html" class="portfolio-item sahayi-card text-decoration-none">
+                         <div class="text-center p-4">
+                           <i class="bi bi-clipboard-check card-icon"></i>
+                           <h3 class="mt-3 mb-2" style="color: #222;">Question Papers</h3>
+                           <p class="text-muted">Previous year papers for exam preparation and practice</p>
+                           <span class="text-danger fw-bold">Explore →</span>
+                         </div>
+                       </a>
+                     </div>
 
+                     <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
+                       <a href="./sahayi/scholarship.html" class="portfolio-item sahayi-card text-decoration-none">
+                         <div class="text-center p-4">
+                           <i class="bi bi-gift card-icon"></i>
+                           <h3 class="mt-3 mb-2" style="color: #222;">Scholarships</h3>
+                           <p class="text-muted">Financial aid opportunities and scholarship information</p>
+                           <span class="text-danger fw-bold">Explore →</span>
+                         </div>
+                       </a>
+                     </div>
+                   </div>
+                 </div>
                   <div class="cta-banner text-white text-center mt-5">
                     <h3>Ready to Excel Academically?</h3>
                     <p class="mb-0 mt-2">Join thousands of students using Sahayi for academic success</p>
                     <a href="./sahayi/index.html" class="btn btn-light mt-3 fw-bold">Explore All Resources →</a>
                   </div>
-                </div>
-              </section>
+               </section>
 
-              <!-- Contact Section -->
-              <section id="contact" class="contact section">
-                <div class="container" data-aos="fade-up">
-                  <div class="section-title">
-                    <h2>Get in Touch</h2>
+               <!-- Contact Section -->
+               <section id="contact" class="contact section">
+                 <div class="container" data-aos="fade-up">
+                   <div class="section-title">
+                     <h2>Get in Touch</h2>
+                   </div>
+
+                   <!-- Contact Team Cards -->
+                   <div class="contact-team">
+                     <!-- <h3>Contact Our Team</h3> -->
+                     <div class="row g-4" id="contact-cards-container">
+                       <!-- Cards will be loaded here via JavaScript -->
+                     </div>
+                   </div>
+
                   </div>
-
-                  <div class="row gy-4">
-                    <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
-                      <div class="info-item d-flex">
-                        <i class="bi bi-envelope flex-shrink-0"></i>
-                        <div>
-                          <h3>Email</h3>
-                          <p><a href="mailto:sfigecpalakkad01@gmail.com">sfigecpalakkad01@gmail.com</a></p>
-                        </div>
-                      </div>
-                    </div>
-
-                    <div class="col-lg-4" data-aos="fade-up" data-aos-delay="200">
-                      <div class="info-item d-flex">
-                        <i class="bi bi-geo-alt flex-shrink-0"></i>
-                        <div>
-                          <h3>Location</h3>
-                          <p>GEC Palakkad, Kerala, India</p>
-                        </div>
-                      </div>
-                    </div>
-
-                    <div class="col-lg-4" data-aos="fade-up" data-aos-delay="300">
-                      <div class="info-item d-flex">
-                        <i class="bi bi-telephone flex-shrink-0"></i>
-                        <div>
-                          <h3>Call Us</h3>
-                          <p><a href="tel:+917994134028">+91 7994 134028</a></p>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-
-                <!-- Contact Team Cards -->
-                <div class="contact-team">
-                  <h3>Contact Our Team</h3>
-                  <div class="row g-4" id="contact-cards-container">
-                    <!-- Cards will be loaded here via JavaScript -->
-                  </div>
-                </div>
-              </section>
+                </section>
 
   </main>
+
+  <!-- Footer -->
+  <footer>
+    <div class="container">
+      <div class="footer-content">
+        <!-- About Section -->
+        <div class="footer-section">
+          <h3>About SFI GECP</h3>
+          <p>SFI (Students' Federation of India) is a major student political organization in Kerala. We are committed to student welfare, academic excellence, and social justice.</p>
+          <div class="footer-social">
+            <a href="https://www.facebook.com/sfigecpkd" target="_blank" aria-label="Facebook"><i class="bi bi-facebook"></i></a>
+            <a href="http://wa.me/+917994134028" target="_blank" aria-label="WhatsApp"><i class="bi bi-whatsapp"></i></a>
+            <a href="https://www.instagram.com/sfigecp?igsh=eHJob2MwMm16OHdo" target="_blank" aria-label="Instagram"><i class="bi bi-instagram"></i></a>
+          </div>
+        </div>
+
+        <!-- Contact Section -->
+        <div class="footer-section">
+          <h3>Contact Us</h3>
+          <div class="footer-contact-item">
+            <i class="bi bi-envelope"></i>
+            <div>
+              <h4>Email</h4>
+              <p><a href="mailto:sfigecpalakkad01@gmail.com">sfigecpalakkad01@gmail.com</a></p>
+            </div>
+          </div>
+          <div class="footer-contact-item">
+            <i class="bi bi-telephone"></i>
+            <div>
+              <h4>Phone</h4>
+              <p><a href="tel:+917994134028">+91 7994 134028</a></p>
+            </div>
+          </div>
+          <div class="footer-contact-item">
+            <i class="bi bi-geo-alt"></i>
+            <div>
+              <h4>Location</h4>
+              <p>GEC Palakkad<br>Palakkad, Kerala, India</p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Quick Links Section -->
+        <div class="footer-section">
+          <h3>Quick Links</h3>
+          <p><a href="#hero">Home</a></p>
+          <p><a href="#about">About</a></p>
+          <p><a href="#unit-committee">Unit Committee</a></p>
+          <p><a href="#sahayi">Sahayi Resources</a></p>
+        </div>
+      </div>
+
+      <!-- Footer Bottom -->
+      <div class="footer-bottom">
+        <p>&copy; 2024 SFI GEC Palakkad. All rights reserved. | Designed for student welfare and academic excellence</p>
+      </div>
+    </div>
+  </footer>
+  <!-- /Footer -->
 
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/aos/aos.js"></script>
