feat: Add Sahayi section with dedicated pages for question papers and notes, new JavaScript, and remove Vercel configuration.

--- a/sahayi/notes.html
+++ b/sahayi/notes.html
@@ -7,6 +7,10 @@
   <title>Study Notes - Sahayi</title>
   <meta name="description" content="Study notes organized by department and semester">
 
+  <!-- Favicons -->
+  <link href="../assets/img/favicon1.png" rel="icon">
+  <link href="../assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+
   <!-- Bootstrap CSS -->
   <link href="../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
