--- a/sahayi/index.html
+++ b/sahayi/index.html
@@ -7,6 +7,10 @@
   <title>Sahayi - Study Companion Hub</title>
   <meta name="description" content="Sahayi Study Companion - Access notes, question papers, and scholarships">
 
+  <!-- Favicons -->
+  <link href="../assets/img/favicon1.png" rel="icon">
+  <link href="../assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+
   <!-- Bootstrap CSS -->
   <link href="../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
