--- a/sahayi/qnpapers.html
+++ b/sahayi/qnpapers.html
@@ -7,6 +7,10 @@
   <title>Question Papers - Sahayi</title>
   <meta name="description" content="Question papers organized by department and semester">
 
+  <!-- Favicons -->
+  <link href="../assets/img/favicon1.png" rel="icon">
+  <link href="../assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+
   <!-- Bootstrap CSS -->
   <link href="../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
